k8s/base/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: aspace
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: aspace
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: aspace
    spec:
      containers:
        - image: ghcr.io/mlibrary/aspace-containerization/aspace-app:v3.4.1
          name: app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8089
          volumeMounts:
            - name: app-data
              mountPath: /archivesspace/data
            - name: app-logs
              mountPath: /archivesspace/logs
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data
        - name: app-logs
          persistentVolumeClaim:
            claimName: app-logs
