k8s/base/app/route-staff.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: aspace
  name: aspace-staff
  annotations:
    haproxy.router.openshift.io/ip_whitelist: >-
      35.1.0.0/16 35.2.0.0/16 35.3.0.0/16 35.4.0.0/16 35.5.0.0/16 35.7.0.0/18
      35.7.128.0/18 141.211.0.0/16 141.213.128.0/17 141.212.0.0/16
spec:
  # host: something.something.umich.edu
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: aspace
